@@ -12,6 +12,7 @@ this repository contains the full copyright notices and license terms. -->
         <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
+        <script type="text/javascript" src="bower_components/moment/min/locales.min.js"></script>
         <script type="text/javascript" src="bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
         <script type="text/javascript" src="bower_components/gettext.js/dist/gettext.min.js"></script>
         <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
